added basic layout... to be continued

--- a/nft-preview-card-component-main/styles.css
+++ b/nft-preview-card-component-main/styles.css
@@ -1,23 +1,69 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
 
 :root {
   --soft-blue: hsl(215, 51%, 70%);
   --cyan: hsl(178, 100%, 50%);
   --darker-blue: hsl(217, 54%, 11%);
   --dark-blue: hsl(216, 50%, 16%);
-  --blue-line: hsl(215, 32%, 27%)
-  --white:hsl(0, 0%, 100%)
+  --blue-line: hsl(215, 32%, 27%);
+  --white: hsl(0, 0%, 100%);
 }
 
 *,
 *::before,
-*::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html,body{
-    font-family: 'Outfit', sans-serif;
-    font-size: 18px;
+html,
+body {
+  font-family: "Outfit", sans-serif;
+  font-size: 18px;
+}
+
+h3 {
+  color: var(--white);
+}
+p {
+  color: var(--soft-blue);
+  font-weight: 300;
+}
+
+.main {
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--darker-blue);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.card {
+  background-color: var(--dark-blue);
+  width: 360px;
+  padding: 25px;
+  border-radius: 10px;
+}
+
+.nft-image {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.avatar {
+  width: 45px;
+  border-radius: 50%;
+  border: solid white 1px;
+}
+
+.values {
+  display: flex;
+  /* justify-content: space-between; */
+}
+
+.attribution {
+  justify-self: flex-end;
 }
